[gd_scene load_steps=4 format=3 uid="uid://vfj2if40vf10"]

[ext_resource type="Script" path="res://Scenes/ContentManager/Custom_Editors/Scripts/TerrainTileEditor.gd" id="1_wp6ou"]
[ext_resource type="PackedScene" uid="uid://b8i6wfk3fngy4" path="res://Scenes/ContentManager/Custom_Widgets/Editable_Item_List.tscn" id="2_erosr"]
[ext_resource type="Texture2D" uid="uid://c8ragmxitca47" path="res://Scenes/ContentManager/Mapeditor/Images/emptyTile.png" id="2_x7b0a"]

[node name="TerrainTileEditor" type="Control" node_paths=PackedStringArray("tileImageDisplay", "IDTextEdit", "NameTextEdit", "DescriptionTextEdit", "CategoriesList")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wp6ou")
tileImageDisplay = NodePath("VBoxContainer/FormGrid/TileImageDisplay")
IDTextEdit = NodePath("VBoxContainer/FormGrid/IDTextEdit")
NameTextEdit = NodePath("VBoxContainer/FormGrid/NameTextEdit")
DescriptionTextEdit = NodePath("VBoxContainer/FormGrid/DescriptionTextEdit")
CategoriesList = NodePath("VBoxContainer/FormGrid/Editable_Item_List")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="FormGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ImageLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Image:"

[node name="TileImageDisplay" type="TextureRect" parent="VBoxContainer/FormGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.4
texture = ExtResource("2_x7b0a")
expand_mode = 3

[node name="IDLabel2" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "ID:"

[node name="IDTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="NameLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Name"

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9

[node name="CategoriesLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Categories:"

[node name="Editable_Item_List" parent="VBoxContainer/FormGrid" instance=ExtResource("2_erosr")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
header = "Categories"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_button_up"]
